k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-library-api
  labels:
    app: the-book
spec:
  replicas: 2
  selector:
    matchLabels:
      app: the-book
  template:
    metadata:
      labels:
        app: the-book
    spec:
      containers:
        - name: the-book
          image: abrahamsiyanbola/book-library-api:3.12
          ports:
            - containerPort: 8000
