k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: book-library-service
  namespace: book-library
spec:
  type: ClusterIP
  selector:
    app: book-library
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
